# DocGenML

./: .env  API_REFERENCE.md  README.md  docs.md  full.md  pyproject.toml  python_file_summarize.py  test.html  test.md  test.tex
codesearchnet_samples/: example_001.py  example_002.py  example_002_reference.txt  example_003.py  example_003_reference.txt  example_004.py  example_005.py  example_005_reference.txt  example_006.py  example_006_reference.txt  example_007.py  example_008.py  example_009.py  example_009_reference.txt  example_010.py  example_011.py  example_011_reference.txt  example_012.py  example_013.py  example_013_reference.txt  example_014.py  example_014_reference.txt  example_015.py  example_015_reference.txt  example_016.py  example_016_reference.txt  example_017.py  example_017_reference.txt  example_018.py  example_018_reference.txt  example_019.py  example_019_reference.txt  example_020.py  example_020_reference.txt  example_021_reference.txt  example_022.py  example_023.py  example_023_reference.txt  example_024.py  example_024_reference.txt  (+724 more)
docgen/: cli.py  evaluate.py  formatter.py  generator.py  parser.py
docgen.egg-info/: PKG-INFO  SOURCES.txt
docgen/templates/: html_template.html  latex_template.tex  markdown_template.md
docgen2/: cli.py  config.py  evaluate.py  summarize.py
docgen2/codesearchnet_samples/: example_010_reference.txt  example_021.py  example_025.py  example_025_reference.txt  example_027_reference.txt  example_029_reference.txt  example_031.py  example_035.py  (+211 more)
tests/: test_operator.py  test_parser.py  test_summarize.py
