[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docgen"
version = "0.1.0"
description = "Generate Markdown docs from Python comments & docstrings"
readme = "README.md"
authors = [{name="Your Name", email="you@example.com"}]
dependencies = ["click"]
[project.scripts]
docgen = "docgen.cli:main"
